--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>25BD Eye Movement Data Visualization Tool</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/master.css">
+    <meta name="author" content="2IOA0 Group 25BD 2020">
   </head>
   <body>
-
+    <h1>Welcome</h1>
   </body>
 </html>
