Removed CNAME and updated index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <meta name="author" content="2IOA0 Group 25BD 2020">
   </head>
   <body>
-    <h1>Welcome</h1>
+    <h1>Viseye</h1>
   </body>
 </html>
