Made start to website landing page.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,23 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>25BD Eye Movement Data Visualization Tool</title>
+    <title>Viseye - Eye Movement Data Visualization Tool</title>
+    <meta name="description" content="Viseye is a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.">
+    <meta name="keywords" content="Viseye,tue,tool,eye,movement,visualization, data">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/master.css">
-    <meta name="author" content="2IOA0 Group 25BD 2020">
+    <meta name="author" content="TU/e 2IOA0 Group 25BD 2020">
   </head>
   <body>
-    <h1>Viseye</h1>
+    <div class="screenbox bg-ldgray">
+      <div class="container">
+        <div class="row center justify-center fillheight">
+          <div class="landingbox col bg-white tx-ldgray">
+            <h1 class="bmar-small">Viseye.</h1>
+            <p>Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
