Small color changes

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <div class="screenbox bg-ldgray">
       <div class="container">
         <div class="row center justify-center fillheight">
-          <div class="landingbox col bg-white tx-ldgray">
-            <h1 class="bmar-small">Viseye.</h1>
-            <p>Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
+          <div class="landingbox col bg-white">
+            <h1 class="bmar-small tx-viseyeblue">Viseye.</h1>
+            <p class="tx-ldgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
           </div>
         </div>
       </div>
