--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
     <title>25BD Eye Movement Data Visualization Tool</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/master.css">
+    <link rel="stylesheet" type="text/css" href="css/upload_function.css">
     <meta name="author" content="2IOA0 Group 25BD 2020">
   </head>
   <body>
     <h1>Welcome</h1>
+    <p>
+      <div id="drop_zone">Drop files here</div>
+      <output id="list"></output>
+      <script src="javascripts/fileOverlay.js" type="text/javascript"></script>
+    </p>
   </body>
 </html>
