--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="author" content="TU/e 2IOA0 Group 25BD 2020">
   </head>
   <body>
-    <div id="app" class="app bg-ldgray">
+    <div id="app" class="app">
       <div class="container">
-        <div class="row center justify-center fillheight">
+        <div class="row center justify-center">
           <div class="landingbox col bg-white">
             <h1 class="bmar-med tx-dgray">Viseye.</h1>
             <p class="bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
-            <p>To start the visualization, please upload a .csv file in the correct format here.</p>
+            <p>To start the visualization, please upload a .csv file in the correct format.</p>
           </div>
         </div>
       </div>
