--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="app" class="app">
       <div class="container">
-        <div class="landingbox bg-white center justify-center">
+        <div class="landingbox bg-white">
           <h1 class="bmar-med tx-dgray">Viseye.</h1>
           <p class="bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
           <p>To start the visualization, please upload a .csv file in the correct format.</p>
