--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <meta name="author" content="TU/e 2IOA0 Group 25BD 2020">
   </head>
   <body>
-    <p>
-      <div id="drop_zone">Drop files here</div>
-      <output id="list"></output>
-      <script src="javascripts/fileOverlay.js" type="text/javascript"></script>
-    </p>
     <div class="screenbox bg-ldgray">
+      <p id="upload_box">
+        <div id="drop_zone">Drop files here</div>
+        <output id="list"></output>
+        <script src="javascripts/fileOverlay.js" type="text/javascript"></script>
+      </p>
       <div class="container">
         <div class="row center justify-center fillheight">
           <div class="landingbox col bg-white">
