Landing page design pretty much finished, ready for upload fucntion implementation.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
       <div class="container">
         <div class="landingbox bg-white">
           <h1 class="bmar-med tx-dgray">Viseye.</h1>
-          <p class="bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
-          <p>To start the visualization, please upload a .csv file in the correct format.</p>
+          <p class="p bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
+          <p class="p bmar-small tx-dgray">To start the visualization, please upload a .csv file in the correct format.</p>
+          <p class="p bmar-small">UPLOAD FUNCTION PLACEHOLDER</p>
+          <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
         </div>
       </div>
     </div>
