--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <p id="upload_box bmar-small">
             <div id="drop_zone">Drop files here</div>
             <output id="list"></output>
-            <script src="javascripts/fileOverlay.js" type="text/javascript"></script>
+            <script src="js/fileOverlay.js" type="text/javascript"></script>
           </p>
           <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
         </div>
