--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           <h1 class="bmar-med tx-dgray">Viseye.</h1>
           <p class="p bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
           <p class="p bmar-small tx-dgray">To start the visualization, please upload a .csv file in the correct format.</p>
-          <p id="upload_box bmar-small">
-            <div id="drop_zone">Drop files here</div>
+          <p id="upload_box">
+            <div id="drop_zone" class="bmar-small">Drop files here</div>
             <output id="list"></output>
             <script src="js/fileOverlay.js" type="text/javascript"></script>
           </p>
