Added D3, but needs another place later probably.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/master.css">
     <link rel="stylesheet" type="text/css" href="css/upload_function.css">
     <meta name="author" content="TU/e 2IOA0 Group 25BD 2020">
+    <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
     <div id="app" class="app">
