--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p id="upload_box">
             <div id="drop_zone" class="bmar-small">Drop files here</div>
             <output id="list"></output>
-            <script src="js/fileOverlay.js" type="text/javascript"></script>
+            <script src="js/upload_function.js" type="text/javascript"></script>
           </p>
           <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
         </div>
