--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" type="text/css" href="css/upload_function.css">
     <meta name="author" content="TU/e 2IOA0 Group 25BD 2020">
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="js/main.js"></script>
   </head>
   <body>
     <div id="app" class="app">
