--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <p class="p bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
           <p class="p bmar-small tx-dgray">To start the visualization, please upload a .csv file in the correct format.</p>
           <p id="upload_box">
-            <div id="drop_zone" class="bmar-small">Drop files here</div>
-            <output id="list"></output>
-            <script src="js/upload_function.js" type="text/javascript"></script>
+            <div id="drop_zone">Drop files here</div>
+            <input id="filebutton" type="file" onchange=openfileBrowse(event) name="filein" value="open file explorer">
+            <script src="javascript/upload_function.js" type="text/javascript"></script>
           </p>
           <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
         </div>
