--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <p class="p bmar-small tx-dgray">To start the visualization, please upload a .csv file in the correct format.</p>
           <p id="upload_box">
             <div id="drop_zone">Drop files here</div>
-            <input id="filebutton" type="file" onchange=openfileBrowse(event) name="filein" value="open file explorer">
-            <script src="javascript/upload_function.js" type="text/javascript"></script>
+            <input id="filebutton" type="file" accept="application/vnd.ms-excel" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
+            <script src="js/upload_function.js" type="text/javascript"></script>
           </p>
           <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
         </div>
