--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
             <output id="list"></output>
             <script src="js/fileOverlay.js" type="text/javascript"></script>
           </p>
-          <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
+          <p class="ps tx-gray bmar-small">Background image is randomly chosen from Unsplash on load.<br>Website is optimized for use with Google Chrome.</p>
+          <p class="pps tx-dgray">(C) 2IOA0 group 25BD 2020</p>
         </div>
       </div>
     </div>
