--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
   <body>
     <div id="app" class="app">
       <div class="container">
-        <div class="landingbox bg-white">
-          <h1 class="bmar-med tx-dgray">Viseye.</h1>
-          <p class="p bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
-          <p class="p bmar-small tx-dgray">To start the visualization, please upload a .csv file in the correct format.</p>
-          <p id="upload_box">
-            <div id="drop_zone">Drop files here</div>
-            <input id="filebutton" type="file" accept="application/vnd.ms-excel" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
-            <script src="js/upload_function.js" type="text/javascript"></script>
-          </p>
-          <p class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
+        <div id="landingbox" class="landingbox bg-white">
+          <h1 id="h1 landingbox" class="bmar-med tx-dgray">Viseye.</h1>
+          <p id="p1 landingbox" class="p bmar-small tx-dgray">Welcome to Viseye, a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.</p>
+          <p id="p2 landingbox" class="p bmar-small tx-dgray">To start the visualization, please upload a .csv file in the correct format.</p>
+          <button id="b1 landingbox" type="button" name="tomain" onclick="startTransition(event)">Press to get started!</button>
+          <script src="js/smoothtransitiontoMain.js" type="text/javascript"></script>
+          <p id="p3 landingbox" class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
         </div>
+      </div>
+
+      <div class="container">
+        <p id="upload_box">
+          <div id="drop_zone">Drop files here</div>
+          <input id="filebutton" type="file" accept="application/vnd.ms-excel" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
+          <script src="js/upload_function.js" type="text/javascript"></script>
       </div>
     </div>
   </body>
