voor die tojson converter

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       </div>
 
       <div class="container">
+        <div id="painter">
+
+        </div>
         <p id="upload_box">
           <div id="drop_zone">Drop files here</div>
           <input id="filebutton" type="file" accept="application/vnd.ms-excel" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
