--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <button type="button" name="tomain" onclick="startTransition(event)">Press to get started!</button>
           <script src="js/toMain.js" type="text/javascript"></script>
           <p id="p3 landingbox" class="ps tx-gray">Background image is randomly chosen from Unsplash on load.</p>
-          <p class="pps tx-dgray">(C) 2IOA0 group 25BD 2020</p>
+          <p class="pps tx-dgray">&copy; 2IOA0 group 25BD 2020</p>
         </div>
       </div>
     </div>
