--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="app" class="app">
       <div id="upload_box">
         <div id="drop_zone">Drop files here</div>
+        <button type="button" id="saveButton" name="button"></button>
         <input id="filebutton" type="file" accept="application/vnd.ms-excel" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
         <script src="js/scattervis.js" type="text/javascript"></script>
       </div>
