--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       <div id="upload_box">
         <div id="drop_zone">Drop files here</div>
         <button type="button" id="saveButton" name="button"></button>
-        <input id="filebutton" type="file" accept="application/vnd.ms-excel" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
+        <input id="filebutton" type="file" accept=".csv" onchange="openfileBrowse(event)" name="filein" value="open file explorer">
         <script src="js/scattervis.js" type="text/javascript"></script>
       </div>
+      <svg id="svgpainter"></svg>
       <script src="https://d3js.org/d3.v3.js"></script>
       <div id="visualization">
 
