--- a/index1.html
+++ b/index1.html
@@ -128,11 +128,11 @@ d3.csv("data.csv", function(error, data) {
                .style("left", (d3.event.pageX + 5) + "px")
                .style("top", (d3.event.pageY - 28) + "px");
       })
-      .on("mouseout", function(d) {
+      /*.on("mouseout", function(d) {
           tooltip.transition()
                .duration(500)
                .style("opacity", 0);
-      });
+      });*/
 
   // draw legend
   var legend = svg.selectAll(".legend")
