--- a/index2.html
+++ b/index2.html
@@ -9,7 +9,8 @@
     <div id="menus"></div>
     <!-- Color Scale -->
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <div id ="scatterPlot">>
+    <div id ="scatterPlot">
+      <div id="tooltip"></div>
       <svg viewBox="0 0 960 500" width = "960" height = "500"></svg>
     </div>
     <script src="js/csvtovis.js" type="text/javascript"></script>
