Added image resolution, axes labels and data selection, minor tweaks of among other the tooltip

--- a/ScatterVis.html
+++ b/ScatterVis.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scatter Plot</title>
-  <link rel="stylesheet" href="css/csvtovis.css">
+  <link rel="stylesheet" href="css/ScatterVis.css">
   <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
 </head>
   <body>
@@ -15,6 +15,6 @@
     <div id ="scatterPlot">
       <svg viewBox="0 0 960 500" width = "960" height = "500"></svg>
     </div>
-    <script src="js/csvtovis.js" type="text/javascript"></script>
+    <script src="js/ScatterVis.js" type="text/javascript"></script>
   </body>
 </html>
