Changed how the styling works and made the visualization page a bit better looking

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Viseye is a tool that visualizes eye movement data. The tool has been created for a DBL project by TU/e students.">
     <meta name="keywords" content="Viseye,tue,tool,eye,movement,visualization,data">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/ProductSans.css">
-    <link rel="stylesheet" type="text/css" href="css/upload_function.css">
+    <link rel="stylesheet" type="text/css" href="static/css/ProductSans.css">
+    <link rel="stylesheet" type="text/css" href="static/css/master.css">
     <meta name="author" content="TU/e 2IOA0 Group 25BD 2020">
     </script>
   </head>
