vis with slider html

--- a/ScatterVis.html
+++ b/ScatterVis.html
@@ -9,8 +9,10 @@
 </head>
   <body>
     <div id="menus"></div>
-    <!-- Color Scale -->
-    <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+    <input type="checkbox" id='checkBox_id' class="checkbox" checked='checked'/>
+    <label id='labelCheckBox'> Cumulative </label>
+    <button id="play-button">Play</button>
+    <svg id='svgSlider' height='50', width='500'></svg>
     <div id="tooltip"></div>
     <div id ="scatterPlot">
       <svg viewBox="0 0 960 500" width = "960" height = "500"></svg>
