--- a/ScatterVis.html
+++ b/ScatterVis.html
@@ -13,9 +13,9 @@
       <label id='labelCheckBox'> Cumulative </label>
       <button id="play-button">Play</button>
       <svg id='svgSlider' height='50', width='500'></svg>
-    <div id="tooltip"></div>
     <div id ="scatterPlot">
-      <svg viewBox="0 0 960 500" width = "960" height = "500"></svg>
+      <div id="tooltip"></div>
+      <svg id = "svgScatter" viewBox="0 0 960 500" width = "960" height = "500"></svg>
     </div>
     <script src="js/ScatterVis.js" type="text/javascript"></script>
   </body>
