ffixed step and doesn't load again
Update that the timeline scaler and stpe is fixed.

--- a/index2.html
+++ b/index2.html
@@ -10,7 +10,7 @@
       <input type="checkbox" id='checkBox_id' class="checkbox" checked='checked'/>
       <label id='labelCheckBox'> Cumulative </label>
       <button id="play-button">Play</button>
-      <svg id='svgSlider' height='50', width='500'></svg>
+      <svg id='svgSlider' height='50' width='500'></svg>
     <!-- Color Scale -->
     <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
     <div id ="scatterPlot">
