--- a/AttentionVis.html
+++ b/AttentionVis.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scatter Plot</title>
+  <title>Attention map</title>
   <link rel="stylesheet" href="css/ScatterVis.css">
   <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
   <!-- specific plugin -->
@@ -12,8 +12,9 @@
   <body>
     <div id="menus"></div>
     <div id ="attentionMap">
-      <div id="tooltip"></div>
-      <svg id = "svgScatter" viewBox="0 0 960 500" width = "960" height = "500"></svg>
+      <svg id = "svgAttention" viewBox="0 0 960 500" width = "960" height = "500"></svg>
+      <svg id = "svgDensityX" width = "500" height = "250"></svg>
+      <svg id = "svgDensityY" width = "500" height = "250"></svg>
     </div>
     <script src="js/AttentionVis.js" type="text/javascript"></script>
   </body>
