--- a/AttentionVis.html
+++ b/AttentionVis.html
@@ -11,11 +11,18 @@
 </head>
   <body>
     <div id="menus"></div>
-    <div id ="attentionMap">
-      <svg id = "svgAttention" viewBox="0 0 960 500" width = "960" height = "500"></svg>
-      <svg id = "svgDensityX" width = "500" height = "250"></svg>
-      <svg id = "svgDensityY" width = "500" height = "250"></svg>
-    </div>
+    <section class = "vis">
+      <div id ="attentionMap">
+        <svg class = "aperture" width = 960 height = 500 viewBox="0 0 960 500" preserveAspectRatio="none">
+          <svg id = "svgAttention" width = "960" height = "500"></svg>
+        </svg>
+      </div>
+      <div id="mini">
+        <svg viewBox="0 0 960 500">
+          <use xlink:href="#svgAttention">
+        </svg>
+      </div><!--miniMap-->
+    </section>
     <script src="js/AttentionVis.js" type="text/javascript"></script>
   </body>
 </html>
