--- a/ScatterVis.html
+++ b/ScatterVis.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Scatter Plot</title>
   <link rel="stylesheet" href="css/ScatterVis.css">
-  <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
 </head>
   <body>
     <div id="menus"></div>
@@ -13,10 +13,21 @@
       <label id='labelCheckBox'> Cumulative </label>
       <button id="play-button">Play</button>
       <svg id='svgSlider' height='50', width='500'></svg>
-    <div id ="scatterPlot">
-      <div id="tooltip"></div>
-      <svg id = "svgScatter" viewBox="0 0 960 500" width = "960" height = "500"></svg>
-    </div>
+    <section class = "vis">
+      <div id ="scatterPlot">
+        <div id="tooltip"></div>
+        <svg class="aperture" viewbox = "0 0 960 500" preserveAspectRatio="none" width="960" height="500">
+          <g>
+            <svg id = "svgScatter" width = "960" height = "500"></svg><!--scatterPlot-->
+          </g>
+          </svg>
+      </div>
+      <div id="mini">
+        <svg viewBox="0 0 960 500">
+          <use xlink:href="#svgScatter">
+        </svg>
+      </div><!--miniMap-->
+    </section>
     <script src="js/ScatterVis.js" type="text/javascript"></script>
   </body>
 </html>
