--- a/AttentionVis.html
+++ b/AttentionVis.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Attention map</title>
-  <link rel="stylesheet" href="css/ScatterVis.css">
+  <link rel="stylesheet" href="css/AttentionVis.css">
   <script src="https://unpkg.com/d3@5.6.0/dist/d3.min.js"></script>
   <!-- specific plugin -->
   <script src="https://d3js.org/d3-contour.v1.min.js"></script>
@@ -15,6 +15,7 @@
       <div id ="attentionMap">
         <svg class = "aperture" width = 960 height = 500 viewBox="0 0 960 500" preserveAspectRatio="none">
           <svg id = "svgAttention" width = "960" height = "500"></svg>
+          <svg id = "svgLegend"></svg>
         </svg>
       </div>
       <div id="mini">
