--- a/indextimeline.html
+++ b/indextimeline.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Trying things</title>
-    <link rel="stylesheet" href="stylesheets/main.css">
+    <link rel="stylesheet" href="css/main.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.0.0/math.min.js"></script>
   </head>
@@ -13,9 +13,10 @@
       </div>
       <br>
       <input type="range" min="0" max="10000" value="0" class="slider" id="timeLineSlider">
+      <input type="range" min="0" max="10000" value="0" class="slider" id="userSlider">
     </div>
     <input type="file" onchange="useFile(event)" id="file">
     <select id="selector" ></select>
-    <script type="text/javascript" src="javascripts/timeline.js"></script>
+    <script type="text/javascript" src="js/timeline.js"></script>
   </body>
 </html>
